# fairbid_v2

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  info.md  package-lock.json  package.json
src/fairbid_v2_backend/: Cargo.toml  fairbid_v2_backend.did
src/fairbid_v2_backend/src/: dutch_auction.rs  eng_auction.rs  get_alchemy.rs  get_balance.rs  get_block.rs  get_eth.rs  lib.rs  payment.rs  sb_auction.rs  withdraw.rs
src/fairbid_v2_frontend/: README.md  craco.config.js  package.json
src/fairbid_v2_frontend/public/: index.html
src/fairbid_v2_frontend/src/: App.js  index.js
src/fairbid_v2_frontend/src/components/: AppLayout.jsx  BidModal.jsx  BidsHistory.jsx  Deposito.jsx  Logo.jsx  NewAvatar.jsx  NothingFound.jsx  Title.jsx  VerifyTransaction.jsx  Wallet.jsx  WalletOpt.jsx  account.jsx  account.module.scss
src/fairbid_v2_frontend/src/components/AskForm/: index.jsx
src/fairbid_v2_frontend/src/constants/: explore.js  links.js
src/fairbid_v2_frontend/src/contexts/: authContext.js  bidModalContext.js  exploreGridContext.js  exploreUpcomingContext.js  questionContext.js  useAuthClient.jsx  useCredits.js
src/fairbid_v2_frontend/src/db/: author.js  blog.js  browse.js  faq.js  itemz.js
src/fairbid_v2_frontend/src/pages/: Auction.jsx  AuctionPage.jsx  ExplorePage.jsx  Home.jsx  LiveAuctions.jsx  NewAuction.jsx  SellerProfile.jsx  UpcomingAuctions.jsx
src/fairbid_v2_frontend/src/service/: config.ts
src/fairbid_v2_frontend/src/styles/: _vars.scss
src/fairbid_v2_frontend/src/ui/: GradientBtn.jsx  LinkWithArrow.jsx
(+55 files in other folders)
