[package]
name = "fairbid_v2_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.5.6"
serde = "1.0.154"
serde_json = "1.0.73"
serde_bytes = "0.11.12"
serde_derive = "1.0.154"
image = { version = "0.24", features = ["png"], default-features = false }
qrcode-generator = "4.1"
anyhow = "1.0"
fast_qr = "=0.12.3"

b3_utils = { version = "0.11.0", features = ["ledger"] }
# b3_utils = "0.11.0" 

evm-rpc-canister-types = "3.0.0"


# standard crate data is left out
[dev-dependencies]
# Use `ic-alloy` hosted on GitHub. `ic-alloy` is not deployed to crates.io yet
